// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateOpinion /> when the query is on desktop should render a FOR opinion 1`] = `
Array [
  .c0 {
  position: fixed;
  pointer-events: none;
  flex-direction: column;
  z-index: 10000;
  align-items: center;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

<div
    className="c0 toasts-container toasts-container--top"
  />,
  .c0 {
  position: fixed;
  pointer-events: none;
  flex-direction: column;
  z-index: 10000;
  align-items: center;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

<div
    className="c0 toasts-container toasts-container--top"
  />,
  .c0 {
  transition: max-height 0.5s ease-out;
  padding: 0;
  border-radius: 4px;
  border: 1px solid;
  border-color: #E8EBED;
  background-color: #fff;
  flex: 1;
  max-height: 400px;
  overflow: hidden;
  position: relative;
}

.c0 .ql-video {
  width: 100%;
  aspect-ratio: 16/9;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c1 {
  background-color: #E4F9E9;
  color: #165A26;
  --current-shadow-color: tag.shadowColor.success;
  position: absolute!important;
  position: relative;
  display: inline-flex;
  align-items: center;
  border-radius: 4px;
  padding-left: 0.57142857rem;
  padding-right: 0.57142857rem;
  padding-top: 0.28571429rem;
  padding-bottom: 0.28571429rem;
  font-size: 0.92857143rem;
  font-weight: 400;
  overflow: hidden;
  gap: 0.28571429rem;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c1:hover {
  cursor: default;
  background: #E4F9E9;
}

.c1:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c2 {
  text-transform: uppercase;
  font-family: Open Sans,system-ui,sans-serif;
  line-height: sm;
  font-size: 0.78571429rem;
  font-weight: 700;
}

.c2:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c3 {
  position: absolute;
  background: linear-gradient(to top, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 30%,rgba(255,255,255,0) 100%);
  width: 100%;
  height: 4.57142857rem;
  bottom: 0;
}

.c3:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c4 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
  margin: 1.71428571rem;
  margin-top: 3.42857143rem;
}

.c4:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c5 {
  display: flex;
  flex-direction: row;
  font-family: Open Sans,system-ui,sans-serif;
  margin-bottom: 1.42857143rem;
}

.c5>* {
  margin-left: 1.71428571rem;
}

.c5>*:first-child {
  margin-left: 0;
  margin-top: 0;
}

.c5:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c7 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  font-family: Open Sans,system-ui,sans-serif;
  background-color: #FAFCFF;
  color: #FFC61A;
  border-color: #FFC61A;
  margin-right: 0.57142857rem;
  align-self: flex-start;
  border: 2px solid;
  border-radius: 100%;
  overflow: hidden;
  font-weight: 600;
}

.c7:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c9 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.c9:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c10 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
}

.c10:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c11 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 1.71428571rem;
  font-size: 1.00000000rem;
  font-weight: 600;
}

.c11:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c12 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 19px;
  color: #5E5E5E;
  font-size: 1.00000000rem;
}

.c12:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c13 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
}

.c13>* {
  margin-top: 0.85714286rem;
}

.c13>*:first-child {
  margin-left: 0;
  margin-top: 0;
}

.c13:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c14 {
  font-family: Open Sans,system-ui,sans-serif;
  font-size: 1.28571429rem;
  font-weight: 600;
  line-height: 1.71428571rem;
  margin: 0;
}

.c14:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c15 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 1.71428571rem;
}

.c15:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c8 {
  user-select: none;
  font-size: 2.35714286rem;
  line-height: 2.28571429rem;
  width: 5.14285714rem;
  height: 5.14285714rem;
  min-width: 5.14285714rem;
  min-height: 5.14285714rem;
  max-width: 5.14285714rem;
  max-height: 5.14285714rem;
}

.c6 {
  position: relative;
}

.c6 .circle {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  bottom: -0;
  right: -5px;
}

<div
    className="c0 cap-abstract-card"
  >
    <div
      aria-label="Tag "
      className="c1 cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title=""
    >
      <span
        className="c2 cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="c3"
    />
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <span
          className="c6"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="c7 c8 cap-avatar"
          >
            <img
              alt="Agui le penseur"
              className="c9"
              src="<mock-value-for-field-\\"avatarUrl\\">"
            />
          </div>
        </span>
        <div
          className="c10"
        >
          <p
            className="c11 cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="c12 cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="c13"
      >
        <h4
          className="c14 cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="c15 cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on desktop should render an AGAINST opinion 1`] = `
Array [
  .c0 {
  position: fixed;
  pointer-events: none;
  flex-direction: column;
  z-index: 10000;
  align-items: center;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

<div
    className="c0 toasts-container toasts-container--top"
  />,
  .c0 {
  position: fixed;
  pointer-events: none;
  flex-direction: column;
  z-index: 10000;
  align-items: center;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

<div
    className="c0 toasts-container toasts-container--top"
  />,
  .c0 {
  transition: max-height 0.5s ease-out;
  padding: 0;
  border-radius: 4px;
  border: 1px solid;
  border-color: #E8EBED;
  background-color: #fff;
  flex: 1;
  max-height: 400px;
  overflow: hidden;
  position: relative;
}

.c0 .ql-video {
  width: 100%;
  aspect-ratio: 16/9;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c1 {
  background-color: #E4F9E9;
  color: #165A26;
  --current-shadow-color: tag.shadowColor.success;
  position: absolute!important;
  position: relative;
  display: inline-flex;
  align-items: center;
  border-radius: 4px;
  padding-left: 0.57142857rem;
  padding-right: 0.57142857rem;
  padding-top: 0.28571429rem;
  padding-bottom: 0.28571429rem;
  font-size: 0.92857143rem;
  font-weight: 400;
  overflow: hidden;
  gap: 0.28571429rem;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c1:hover {
  cursor: default;
  background: #E4F9E9;
}

.c1:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c2 {
  text-transform: uppercase;
  font-family: Open Sans,system-ui,sans-serif;
  line-height: sm;
  font-size: 0.78571429rem;
  font-weight: 700;
}

.c2:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c3 {
  position: absolute;
  background: linear-gradient(to top, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 30%,rgba(255,255,255,0) 100%);
  width: 100%;
  height: 4.57142857rem;
  bottom: 0;
}

.c3:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c4 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
  margin: 1.71428571rem;
  margin-top: 3.42857143rem;
}

.c4:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c5 {
  display: flex;
  flex-direction: row;
  font-family: Open Sans,system-ui,sans-serif;
  margin-bottom: 1.42857143rem;
}

.c5>* {
  margin-left: 1.71428571rem;
}

.c5>*:first-child {
  margin-left: 0;
  margin-top: 0;
}

.c5:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c7 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  font-family: Open Sans,system-ui,sans-serif;
  background-color: #FAFCFF;
  color: #FFC61A;
  border-color: #FFC61A;
  margin-right: 0.57142857rem;
  align-self: flex-start;
  border: 2px solid;
  border-radius: 100%;
  overflow: hidden;
  font-weight: 600;
}

.c7:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c9 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.c9:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c10 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
}

.c10:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c11 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 1.71428571rem;
  font-size: 1.00000000rem;
  font-weight: 600;
}

.c11:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c12 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 19px;
  color: #5E5E5E;
  font-size: 1.00000000rem;
}

.c12:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c13 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
}

.c13>* {
  margin-top: 0.85714286rem;
}

.c13>*:first-child {
  margin-left: 0;
  margin-top: 0;
}

.c13:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c14 {
  font-family: Open Sans,system-ui,sans-serif;
  font-size: 1.28571429rem;
  font-weight: 600;
  line-height: 1.71428571rem;
  margin: 0;
}

.c14:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c15 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 1.71428571rem;
}

.c15:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c8 {
  user-select: none;
  font-size: 2.35714286rem;
  line-height: 2.28571429rem;
  width: 5.14285714rem;
  height: 5.14285714rem;
  min-width: 5.14285714rem;
  min-height: 5.14285714rem;
  max-width: 5.14285714rem;
  max-height: 5.14285714rem;
}

.c6 {
  position: relative;
}

.c6 .circle {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  bottom: -0;
  right: -5px;
}

<div
    className="c0 cap-abstract-card"
  >
    <div
      aria-label="Tag "
      className="c1 cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title=""
    >
      <span
        className="c2 cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="c3"
    />
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <span
          className="c6"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="c7 c8 cap-avatar"
          >
            <img
              alt="Agui le penseur"
              className="c9"
              src="<mock-value-for-field-\\"avatarUrl\\">"
            />
          </div>
        </span>
        <div
          className="c10"
        >
          <p
            className="c11 cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="c12 cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="c13"
      >
        <h4
          className="c14 cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="c15 cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on desktop should render with a read more link 1`] = `
Array [
  .c0 {
  position: fixed;
  pointer-events: none;
  flex-direction: column;
  z-index: 10000;
  align-items: center;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

<div
    className="c0 toasts-container toasts-container--top"
  />,
  .c0 {
  position: fixed;
  pointer-events: none;
  flex-direction: column;
  z-index: 10000;
  align-items: center;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

<div
    className="c0 toasts-container toasts-container--top"
  />,
  .c0 {
  transition: max-height 0.5s ease-out;
  padding: 0;
  border-radius: 4px;
  border: 1px solid;
  border-color: #E8EBED;
  background-color: #fff;
  flex: 1;
  max-height: 2000px;
  overflow: hidden;
  position: relative;
}

.c0 .ql-video {
  width: 100%;
  aspect-ratio: 16/9;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c1 {
  background-color: #E4F9E9;
  color: #165A26;
  --current-shadow-color: tag.shadowColor.success;
  position: absolute!important;
  position: relative;
  display: inline-flex;
  align-items: center;
  border-radius: 4px;
  padding-left: 0.57142857rem;
  padding-right: 0.57142857rem;
  padding-top: 0.28571429rem;
  padding-bottom: 0.28571429rem;
  font-size: 0.92857143rem;
  font-weight: 400;
  overflow: hidden;
  gap: 0.28571429rem;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c1:hover {
  cursor: default;
  background: #E4F9E9;
}

.c1:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c2 {
  text-transform: uppercase;
  font-family: Open Sans,system-ui,sans-serif;
  line-height: sm;
  font-size: 0.78571429rem;
  font-weight: 700;
}

.c2:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c3 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
  margin: 1.71428571rem;
  margin-top: 3.42857143rem;
}

.c3:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c4 {
  display: flex;
  flex-direction: row;
  font-family: Open Sans,system-ui,sans-serif;
  margin-bottom: 1.42857143rem;
}

.c4>* {
  margin-left: 1.71428571rem;
}

.c4>*:first-child {
  margin-left: 0;
  margin-top: 0;
}

.c4:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c6 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  font-family: Open Sans,system-ui,sans-serif;
  background-color: #FAFCFF;
  color: #FFC61A;
  border-color: #FFC61A;
  margin-right: 0.57142857rem;
  align-self: flex-start;
  border: 2px solid;
  border-radius: 100%;
  overflow: hidden;
  font-weight: 600;
}

.c6:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c8 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.c8:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c9 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
}

.c9:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c10 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 1.71428571rem;
  font-size: 1.00000000rem;
  font-weight: 600;
}

.c10:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c11 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 19px;
  color: #5E5E5E;
  font-size: 1.00000000rem;
}

.c11:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c12 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
}

.c12>* {
  margin-top: 0.85714286rem;
}

.c12>*:first-child {
  margin-left: 0;
  margin-top: 0;
}

.c12:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c13 {
  font-family: Open Sans,system-ui,sans-serif;
  font-size: 1.28571429rem;
  font-weight: 600;
  line-height: 1.71428571rem;
  margin: 0;
}

.c13:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c14 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 1.71428571rem;
}

.c14:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c7 {
  user-select: none;
  font-size: 2.35714286rem;
  line-height: 2.28571429rem;
  width: 5.14285714rem;
  height: 5.14285714rem;
  min-width: 5.14285714rem;
  min-height: 5.14285714rem;
  max-width: 5.14285714rem;
  max-height: 5.14285714rem;
}

.c5 {
  position: relative;
}

.c5 .circle {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  bottom: -0;
  right: -5px;
}

<div
    className="c0 cap-abstract-card"
  >
    <div
      aria-label="Tag "
      className="c1 cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title=""
    >
      <span
        className="c2 cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <span
          className="c5"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="c6 c7 cap-avatar"
          >
            <img
              alt="Agui le penseur"
              className="c8"
              src="<mock-value-for-field-\\"avatarUrl\\">"
            />
          </div>
        </span>
        <div
          className="c9"
        >
          <p
            className="c10 cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="c11 cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="c12"
      >
        <h4
          className="c13 cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="c14 cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on mobile should render a FOR opinion 1`] = `
Array [
  .c0 {
  position: fixed;
  pointer-events: none;
  flex-direction: column;
  z-index: 10000;
  align-items: center;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

<div
    className="c0 toasts-container toasts-container--top"
  />,
  .c0 {
  position: fixed;
  pointer-events: none;
  flex-direction: column;
  z-index: 10000;
  align-items: center;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

<div
    className="c0 toasts-container toasts-container--top"
  />,
  .c0 {
  transition: max-height 0.5s ease-out;
  padding: 0;
  border-radius: 4px;
  border: 1px solid;
  border-color: #E8EBED;
  background-color: #fff;
  flex: 1;
  max-height: 400px;
  overflow: hidden;
  position: relative;
}

.c0 .ql-video {
  width: 100%;
  aspect-ratio: 16/9;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c1 {
  background-color: #E4F9E9;
  color: #165A26;
  --current-shadow-color: tag.shadowColor.success;
  position: absolute!important;
  position: relative;
  display: inline-flex;
  align-items: center;
  border-radius: 4px;
  padding-left: 0.57142857rem;
  padding-right: 0.57142857rem;
  padding-top: 0.28571429rem;
  padding-bottom: 0.28571429rem;
  font-size: 0.92857143rem;
  font-weight: 400;
  overflow: hidden;
  gap: 0.28571429rem;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c1:hover {
  cursor: default;
  background: #E4F9E9;
}

.c1:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c2 {
  text-transform: uppercase;
  font-family: Open Sans,system-ui,sans-serif;
  line-height: sm;
  font-size: 0.78571429rem;
  font-weight: 700;
}

.c2:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c3 {
  position: absolute;
  background: linear-gradient(to top, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 30%,rgba(255,255,255,0) 100%);
  width: 100%;
  height: 4.57142857rem;
  bottom: 0;
}

.c3:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c4 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
  margin: 1.71428571rem;
  margin-top: 3.42857143rem;
}

.c4:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c5 {
  display: flex;
  flex-direction: row;
  font-family: Open Sans,system-ui,sans-serif;
  margin-bottom: 1.42857143rem;
}

.c5>* {
  margin-left: 1.71428571rem;
}

.c5>*:first-child {
  margin-left: 0;
  margin-top: 0;
}

.c5:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c7 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  font-family: Open Sans,system-ui,sans-serif;
  background-color: #FAFCFF;
  color: #FFC61A;
  border-color: #FFC61A;
  margin-right: 0.57142857rem;
  align-self: flex-start;
  border: 2px solid;
  border-radius: 100%;
  overflow: hidden;
  font-weight: 600;
}

.c7:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c9 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.c9:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c10 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
}

.c10:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c11 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 1.71428571rem;
  font-size: 1.00000000rem;
  font-weight: 600;
}

.c11:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c12 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 19px;
  color: #5E5E5E;
  font-size: 1.00000000rem;
}

.c12:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c13 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
}

.c13>* {
  margin-top: 0.85714286rem;
}

.c13>*:first-child {
  margin-left: 0;
  margin-top: 0;
}

.c13:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c14 {
  font-family: Open Sans,system-ui,sans-serif;
  font-size: 1.28571429rem;
  font-weight: 600;
  line-height: 1.71428571rem;
  margin: 0;
}

.c14:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c15 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 1.71428571rem;
}

.c15:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c16 {
  background: linear-gradient(to bottom, rgba(255,255,255,0.1) 5%, white 25%);
  display: block;
  align-items: center;
  font-family: Open Sans,system-ui,sans-serif;
  font-size: 1.00000000rem;
  font-weight: 600;
  line-height: 1.71428571rem;
  border: none;
  border-radius: 0.28571429rem;
  background-color: transparent;
  padding-left: 1.14285714rem;
  padding-right: 1.14285714rem;
  padding-top: 0.85714286rem;
  padding-bottom: 0.85714286rem;
  align-self: center;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 3.42857143rem;
}

.c16:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c17 {
  outline: none;
  text-decoration: underline;
  color: #006CE0;
}

.c17:disabled {
  cursor: not-allowed;
}

.c17[data-loading="true"] {
  cursor: wait;
}

.c17 .cap-icon.cap-button-icon {
  color: #006CE0;
}

.c17:hover {
  color: #0051A8;
}

.c17:hover .cap-icon.cap-button-icon {
  color: #0051A8;
}

.c17:disabled {
  text-decoration: none;
  color: #8AC2FF;
}

.c17:disabled .cap-icon.cap-button-icon {
  color: #8AC2FF;
}

.c17[data-loading="true"] {
  text-decoration: underline;
  color: #006CE0;
}

.c17[data-loading="true"] .cap-icon.cap-button-icon {
  color: #006CE0;
}

.c8 {
  user-select: none;
  font-size: 2.35714286rem;
  line-height: 2.28571429rem;
  width: 5.14285714rem;
  height: 5.14285714rem;
  min-width: 5.14285714rem;
  min-height: 5.14285714rem;
  max-width: 5.14285714rem;
  max-height: 5.14285714rem;
}

.c6 {
  position: relative;
}

.c6 .circle {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  bottom: -0;
  right: -5px;
}

<div
    className="c0 cap-abstract-card"
  >
    <div
      aria-label="Tag "
      className="c1 cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title=""
    >
      <span
        className="c2 cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="c3"
    />
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <span
          className="c6"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="c7 c8 cap-avatar"
          >
            <img
              alt="Agui le penseur"
              className="c9"
              src="<mock-value-for-field-\\"avatarUrl\\">"
            />
          </div>
        </span>
        <div
          className="c10"
        >
          <p
            className="c11 cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="c12 cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="c13"
      >
        <h4
          className="c14 cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="c15 cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
        <button
          className="c16 c17 cap-button"
          onClick={[Function]}
          type="button"
        >
          capco.module.read_more
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on mobile should render with a read more link 1`] = `
Array [
  .c0 {
  position: fixed;
  pointer-events: none;
  flex-direction: column;
  z-index: 10000;
  align-items: center;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

<div
    className="c0 toasts-container toasts-container--top"
  />,
  .c0 {
  position: fixed;
  pointer-events: none;
  flex-direction: column;
  z-index: 10000;
  align-items: center;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

<div
    className="c0 toasts-container toasts-container--top"
  />,
  .c0 {
  transition: max-height 0.5s ease-out;
  padding: 0;
  border-radius: 4px;
  border: 1px solid;
  border-color: #E8EBED;
  background-color: #fff;
  flex: 1;
  max-height: 2000px;
  overflow: hidden;
  position: relative;
}

.c0 .ql-video {
  width: 100%;
  aspect-ratio: 16/9;
}

.c0:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c1 {
  background-color: #E4F9E9;
  color: #165A26;
  --current-shadow-color: tag.shadowColor.success;
  position: absolute!important;
  position: relative;
  display: inline-flex;
  align-items: center;
  border-radius: 4px;
  padding-left: 0.57142857rem;
  padding-right: 0.57142857rem;
  padding-top: 0.28571429rem;
  padding-bottom: 0.28571429rem;
  font-size: 0.92857143rem;
  font-weight: 400;
  overflow: hidden;
  gap: 0.28571429rem;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c1:hover {
  cursor: default;
  background: #E4F9E9;
}

.c1:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c2 {
  text-transform: uppercase;
  font-family: Open Sans,system-ui,sans-serif;
  line-height: sm;
  font-size: 0.78571429rem;
  font-weight: 700;
}

.c2:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c3 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
  margin: 1.71428571rem;
  margin-top: 3.42857143rem;
}

.c3:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c4 {
  display: flex;
  flex-direction: row;
  font-family: Open Sans,system-ui,sans-serif;
  margin-bottom: 1.42857143rem;
}

.c4>* {
  margin-left: 1.71428571rem;
}

.c4>*:first-child {
  margin-left: 0;
  margin-top: 0;
}

.c4:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c6 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  font-family: Open Sans,system-ui,sans-serif;
  background-color: #FAFCFF;
  color: #FFC61A;
  border-color: #FFC61A;
  margin-right: 0.57142857rem;
  align-self: flex-start;
  border: 2px solid;
  border-radius: 100%;
  overflow: hidden;
  font-weight: 600;
}

.c6:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c8 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.c8:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c9 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
}

.c9:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c10 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 1.71428571rem;
  font-size: 1.00000000rem;
  font-weight: 600;
}

.c10:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c11 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 19px;
  color: #5E5E5E;
  font-size: 1.00000000rem;
}

.c11:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c12 {
  display: flex;
  flex-direction: column;
  font-family: Open Sans,system-ui,sans-serif;
}

.c12>* {
  margin-top: 0.85714286rem;
}

.c12>*:first-child {
  margin-left: 0;
  margin-top: 0;
}

.c12:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c13 {
  font-family: Open Sans,system-ui,sans-serif;
  font-size: 1.28571429rem;
  font-weight: 600;
  line-height: 1.71428571rem;
  margin: 0;
}

.c13:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c14 {
  font-family: Open Sans,system-ui,sans-serif;
  line-height: 1.71428571rem;
}

.c14:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c15 {
  background: linear-gradient(to bottom, rgba(255,255,255,0.1) 5%, white 25%);
  display: block;
  align-items: center;
  font-family: Open Sans,system-ui,sans-serif;
  font-size: 1.00000000rem;
  font-weight: 600;
  line-height: 1.71428571rem;
  border: none;
  border-radius: 0.28571429rem;
  background-color: transparent;
  padding-left: 1.14285714rem;
  padding-right: 1.14285714rem;
  padding-top: 0.85714286rem;
  padding-bottom: 0.85714286rem;
  align-self: center;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 3.42857143rem;
}

.c15:focus-visible:not(.cap-input,.cap-textarea,.cap-input-number,.cap-color-picker,.cap-menu__list,.cap-menu__item) {
  outline: 2px #fff solid;
  outline-offset: 0;
  box-shadow: 0 0 0 4px #0051A8;
}

.c16 {
  outline: none;
  text-decoration: underline;
  color: #006CE0;
}

.c16:disabled {
  cursor: not-allowed;
}

.c16[data-loading="true"] {
  cursor: wait;
}

.c16 .cap-icon.cap-button-icon {
  color: #006CE0;
}

.c16:hover {
  color: #0051A8;
}

.c16:hover .cap-icon.cap-button-icon {
  color: #0051A8;
}

.c16:disabled {
  text-decoration: none;
  color: #8AC2FF;
}

.c16:disabled .cap-icon.cap-button-icon {
  color: #8AC2FF;
}

.c16[data-loading="true"] {
  text-decoration: underline;
  color: #006CE0;
}

.c16[data-loading="true"] .cap-icon.cap-button-icon {
  color: #006CE0;
}

.c7 {
  user-select: none;
  font-size: 2.35714286rem;
  line-height: 2.28571429rem;
  width: 5.14285714rem;
  height: 5.14285714rem;
  min-width: 5.14285714rem;
  min-height: 5.14285714rem;
  max-width: 5.14285714rem;
  max-height: 5.14285714rem;
}

.c5 {
  position: relative;
}

.c5 .circle {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  bottom: -0;
  right: -5px;
}

<div
    className="c0 cap-abstract-card"
  >
    <div
      aria-label="Tag "
      className="c1 cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title=""
    >
      <span
        className="c2 cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <span
          className="c5"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="c6 c7 cap-avatar"
          >
            <img
              alt="Agui le penseur"
              className="c8"
              src="<mock-value-for-field-\\"avatarUrl\\">"
            />
          </div>
        </span>
        <div
          className="c9"
        >
          <p
            className="c10 cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="c11 cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="c12"
      >
        <h4
          className="c13 cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="c14 cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
        <button
          className="c15 c16 cap-button"
          onClick={[Function]}
          type="button"
        >
          capco.module.read_more
        </button>
      </div>
    </div>
  </div>,
]
`;
